Do not duplicated selected items

--- a/app/assets/stylesheets/turbo_autocomplete/application.scss
+++ b/app/assets/stylesheets/turbo_autocomplete/application.scss
@@ -75,7 +75,7 @@
     }
 
     span.selection:empty + span.prompt {
-      display: inline;
+      display: inline-block;
     }
 
     + .visible-input {
