--- a/app/assets/stylesheets/turbo_autocomplete/application.scss
+++ b/app/assets/stylesheets/turbo_autocomplete/application.scss
@@ -5,7 +5,7 @@
   flex: 1 1 auto;
   min-width: 0;
   height: auto !important;
-  line-height: 20px !important;
+  // line-height: 20px !important;
 
   small {
     color: #888;
